Error Mitigation/MagiCoder/Data/javax_swing_plaf/javax_swing_plafOutputResult.txt
Sample: BorderUIResource_1
----------------------------------------------------------------
output:
./Data/javax_swing_plaf/javaFiles/BorderUIResource_1.java:5: error: constructor BorderUIResource in class BorderUIResource cannot be applied to given types;
        BorderUIResource border = new BorderUIResource();
                                  ^
  required: Border
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error


================================================================

Sample: BorderUIResource_2
----------------------------------------------------------------
output:
./Data/javax_swing_plaf/javaFiles/BorderUIResource_2.java:15: error: cannot find symbol
        BorderUIResource border = new BorderUIResource();
        ^
  symbol:   class BorderUIResource
  location: class BorderUIResource_2
./Data/javax_swing_plaf/javaFiles/BorderUIResource_2.java:15: error: cannot find symbol
        BorderUIResource border = new BorderUIResource();
                                      ^
  symbol:   class BorderUIResource
  location: class BorderUIResource_2
2 errors


================================================================

Sample: BorderUIResource_4
----------------------------------------------------------------
output:
./Data/javax_swing_plaf/javaFiles/BorderUIResource_4.java:18: error: cannot find symbol
        BorderUIResource border = (BorderUIResource) button.getBorder();
        ^
  symbol:   class BorderUIResource
  location: class BorderUIResource_4
./Data/javax_swing_plaf/javaFiles/BorderUIResource_4.java:18: error: cannot find symbol
        BorderUIResource border = (BorderUIResource) button.getBorder();
                                   ^
  symbol:   class BorderUIResource
  location: class BorderUIResource_4
2 errors


================================================================

Sample: IconUIResource_4
----------------------------------------------------------------
output:
./Data/javax_swing_plaf/javaFiles/IconUIResource_4.java:6: error: constructor IconUIResource in class IconUIResource cannot be applied to given types;
        Icon icon = new IconUIResource() {
                    ^
  required: Icon
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error


================================================================

Sample: IconUIResource_5
----------------------------------------------------------------
output:
./Data/javax_swing_plaf/javaFiles/IconUIResource_5.java:6: error: constructor IconUIResource in class IconUIResource cannot be applied to given types;
        Icon icon = new IconUIResource() {
                    ^
  required: Icon
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error


================================================================

Sample: LayerUI_1
----------------------------------------------------------------
output:
./Data/javax_swing_plaf/javaFiles/LayerUI_1.java:14: error: cannot find symbol
        layer.setLayerUI(layerUI);
             ^
  symbol:   method setLayerUI(LayerUI<JPanel>)
  location: variable layer of type JLayer<JPanel>
1 error


================================================================

Sample: LayerUI_2
----------------------------------------------------------------
================================================================

Sample: LayerUI_3
----------------------------------------------------------------
output:
./Data/javax_swing_plaf/javaFiles/LayerUI_3.java:23: error: paintComponent(Graphics) has protected access in JComponent
                panel.paintComponent(g);
                     ^
./Data/javax_swing_plaf/javaFiles/LayerUI_3.java:27: error: cannot find symbol
        panel.setLayerUI(layerUI);
             ^
  symbol:   method setLayerUI(LayerUI<JPanel>)
  location: variable panel of type JPanel
2 errors


================================================================

